--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./src/css/styles.css">    
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
 
-    <title>Document</title>
+    <title>Huddle</title>
 </head>
 
 <body>
