alterei o tamanho da fonte base, diminuí os ícones de redes sociais, coloquei uma largura máxima para o conteúdo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <footer>
             <a href="#">
-                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-facebook"></i>
             </a>
 
             <a href="#">
